@@ -184,6 +184,7 @@ Jython in ways large and small, in no particular order:
     Raymond Ferguson
     yishenggudou (愧僧)
     Andrew Kuchling
+    Jim Peterson
 
 Local Variables:
 mode: indented-text
